@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# axHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

abstract class AbstractProp{
    +Prop(int locationX, int locationY, int speedX, int speedY):void
    +func():void
    +forward():void
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

AbstractProp <|--BloodProp
AbstractProp <|--BombProp
AbstractProp <|--BulletProp

abstract class PlaneFactory
class MobEnemyFactory
class EliteEnemyFactory
class BossEnemyFactory

PlaneFactory <|-- MobEnemyFactory
PlaneFactory <|-- EliteEnemyFactory
PlaneFactory <|-- BossEnemyFactory
AbstractAircraft <.. PlaneFactory

MobEnemy <.. MobEnemyFactory : create
EliteEnemy <.. EliteEnemyFactory : create
BossEnemy <.. BossEnemyFactory : create

class PropFactory
class BloodPropFactory
class BombPropFactory
class BulletPropFactory

PropFactory <|-- BloodPropFactory
PropFactory <|-- BombPropFactory
PropFactory <|-- BulletPropFactory

PropFactory ..> AbstractProp
BloodPropFactory ..> BloodProp : create
BombPropFactory ..> BombProp : create
BulletPropFactory ..> BulletProp : create

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    {static} - heroAircraft : HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    {static} + getInstance() : HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteEnemy{
    +EliteEnemy(int locationX, int locationY, int speedX, int speedY,int hp)
    +forward():void
    +shoot():List<Bullet>
}

class BossEnemy{
    +BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    +forward():void
    +shoot():List<Bullet>
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class BloodProp{
    +BloodProp(int locationX, int locationY, int speedX, int speedY)
    +func(int hp):void
    +forward():void
}

class BombProp{
    +BombProp(int locationX, int locationY, int speedX, int speedY)
    +func():void
    +forward():void
}

class BulletProp{
    +BulletProp(int locationX, int locationY, int speedX, int speedY)
    +func():void
    +forward():void
}

class PlaneFactory{
    +createAircraft():AbstractAircraft
}

class MobEnemyFactory{
    +createAircraft():AbstractAircraft
}
class EliteEnemyFactory{
    +createAircraft():AbstractAircraft
}
class BossEnemyFactory{
    +createAircraft():AbstractAircraft
}

class PropFactory{
    +createAbstractProp():AbstractProp
}

class BloodPropFactory{
    +createAbstractProp():AbstractProp
}
class BombPropFactory{
    +createAbstractProp():AbstractProp
}
class BulletPropFactory{
    +createAbstractProp():AbstractProp
}

@enduml